# travel-city-planner-mcp

./: .dockerignore  .gitignore  ASSET_CREDITS.md  Dockerfile  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  relay10.config.json  requirements.txt  server.py
.github/workflows/: publish-ghcr.yml  test.yml
LICENSES/: GmarketSans-OFL-1.1.txt
data/: destinations.json
docs/relay10/: final-report.html  readers.json  reviewer.json  summary.md  verification.json
examples/: demo-plan.json
planner/: __init__.py  catalog.py  engine.py  icons.py  live_data.py  render.py  tokens.py
scripts/: build_demo.py  import_legacy_catalog.mjs  smoke_mcp.py
tests/: test_catalog.py  test_contract.py  test_demo_and_static.py  test_engine.py  test_live_data.py  test_tokens_mutation.py
tests/browser/: browser-gate.spec.mjs  build_export_fixture.py  fixture-plan.json  playwright.config.mjs
viewer/: app.js  index.html  styles.css
